Temporary fix for making the proposal at least readable on mobile

--- a/openlang-proposal/style.css
+++ b/openlang-proposal/style.css
@@ -2,6 +2,7 @@
 @import url(https://fonts.googleapis.com/css?family=Raleway:400,800);
 @import url(https://fonts.googleapis.com/css?family=PT+Sans);
 
+/* Page Styles */
 header {
   width: 100%;
   height: 50px;
@@ -11,6 +12,7 @@ header {
   border-bottom: 2px solid #6d6d6d;
   padding-top: 1em;
   padding-bottom: 1em;
+  padding-left: 10pt;
   margin-bottom: 2.5em;
 }
 
